# StockSage

./: .env.example  .gitignore  BUILD_PLAN.md  README.md  app.py  demo.py  main.py  pyproject.toml
.streamlit/: config.toml
agents/: fundamental_agent.py  layer_orchestrator.py  llm_utils.py  market_signal_agent.py  meta_orchestrator.py  risk_agent.py  sector_agent.py  synthesis_agent.py
data/: fetchers.py
memory/: cognee_client.py
prompts/: fundamental_agent.txt  market_signal_agent.txt  meta_orchestrator.txt  risk_agent.txt  sector_agent.txt  synthesis_agent.txt
report/: html_preview.py  pdf_generator.py  theme.py
tests/fixtures/: edge_case_report.md  sample_report.md
